--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "keywords": ["react-native","components","cli"],
   "author": "Ferdinand Fichtl",
   "license": "MIT",
+  "dependencies": {
+    "react-native-svg": "^13.9.0",
+    "react-native-safe-area-context": "^4.5.3",
+    "react-native-reanimated": "^3.3.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/dynamiclayer/dynamiclayer-cli.git"
