--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "@dynamiclayer/cli",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Reusable React Native components and CLI to copy them",
   "bin": {
     "dynamiclayer": "./cli.js"
   },
-  "files": ["cli.js","components/","styles/"],
-  "keywords": ["react-native","components","cli"],
+  "files": [
+    "cli.js",
+    "components/",
+    "styles/"
+  ],
+  "keywords": [
+    "react-native",
+    "components",
+    "cli"
+  ],
   "author": "Ferdinand Fichtl",
   "license": "MIT",
   "dependencies": {
