feat: add Button, ButtonDock, and ButtonIcon components with documentation
- Introduced Button component with various styles, sizes, and loading states.
- Added ButtonDock for persistent action bars with customizable button arrangements.
- Implemented ButtonIcon for icon-only actions, supporting different states and sizes.
- Updated documentation for new components including usage examples and props.
- Enhanced existing documentation for Alert, Avatar, Badge, Tag, and CLI with improved descriptions and examples.
- Added blueprint for future documentation consistency.

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "type": "git",
     "url": "https://github.com/dynamiclayer/dynamiclayer-cli.git"
   },
+  "homepage": "https://github.com/npm/example#readme",
   "publishConfig": {
     "access": "public"
   }
